@@ -1,3 +1,8 @@
+2009-07-02  Jeffrey Stedfast  <fejj@novell.com>
+
+	* XmlLanguage.cs (GetLanguage): Validate the eitfLanguageTag
+	string and throw ArgumentExceptions if they are badly formatted.
+
 2009-06-30  Jackson Harper  <jackson@ximian.com>
 
 	* XamlReader.cs: Implement LoadWithInitialTemplateValidation
